@@ -1,3 +1,4 @@
+	* improve file_storage::map_file when dealing with invalid input
 	* improve handling of invalid utf-8 sequences in strings in torrent files
 	* handle more cases of broken .torrent files
 	* fix bug filename collision resolver
